feat: kex-backend